--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@openzeppelin/contracts": "^5.4.0",
     "@reown/appkit": "^1.8.7",
     "@tanstack/react-query": "^5.90.2",
+    "@web3modal/react": "^2.7.1",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
