--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
     "@reown/appkit": "^1.8.7",
+    "@reown/appkit-adapter-wagmi": "^1.8.7",
     "@tanstack/react-query": "^5.90.2",
     "@web3modal/react": "^2.7.1",
     "next": "15.5.4",
